--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
     <a href="" class="header__button">Join The Event</a>
 </header>
 <div class="container">
-
+    <div class="wrap">
+        <div class="container__text">
+            Kristen Steelee <span>&</span> <p>Cody Bearden</p>
+        </div>
+        <div class="container__center">
+            <p>1</p>
+            Month
+            <p>1</p>
+            <p>3</p>
+            <p>3</p>
+            <p>4</p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
