--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="header">
-    <a href="#" class="header__logo">our wedding</a>
+    <a href="#" class="header__logo">наша сваадьба</a>
     <nav>
         <ul class="header__list">
             <li class="header__item">
@@ -32,15 +32,71 @@
 <div class="container">
     <div class="wrap">
         <div class="container__text">
-            Kristen Steelee <span>&</span> <p>Cody Bearden</p>
+            Maria Timofeeva <span>&</span> <p>Alexey Skityuk</p>
         </div>
         <div class="container__center">
-            <p>1</p>
-            Month
-            <p>1</p>
-            <p>3</p>
-            <p>3</p>
-            <p>4</p>
+            <div class="">01
+            <p>Month</p>
+            </div>
+            <div class="">02
+            <p>Days</p>
+            </div>
+            <div class="">02
+            <p>Hours</p>
+            </div>
+            <div class="">02
+            <p>Minutes</p>
+            </div>
+            <div class="">02
+            <p>Seconds</p>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="welcome">
+    <div class="wrap">
+        <div class="welcome__wel">
+            <div class="welcome__alex">
+                <img src="img/ram.png" alt="">
+                <h2>Kristen Steelee</h2>
+                <p>Goodbye gray sky hello bl there's nothing can hold me when I hold you. Feels so right it cant be . Rock in roll.</p>
+            </div>
+            <div class="welcome__text">
+                <h2>Welcome</h2>
+                <p>WE CORDIALY INVITE YOU TO SHARE THE TIME OF JOY</p>
+                <p class="span">THURSDAY – 07 July 2016</p>
+            </div>
+            <div class="welcome__kris">
+                <img src="img/ram.png" alt="">
+                <h2>Cody Bearden</h2>
+                <p>Goodbye gray sky hello bl there's nothing can hold me when I hold you. Feels so right it cant be . Rock in roll.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="event">
+    <div class="wrap">
+        <h2>The Wedding Event</h2>
+        <div class="event__main">
+            <div class="event__cerem">
+                <div class="event__top1">
+                    <h2>Main Ceremony</h2>
+                </div>
+                <p>It would be great if you'd join us in celebrating our marriage. Situated in the country side the venue will provide the perfect.</p>
+                <img src="img/cvet.png" alt="">
+                <div class="event__time"></div>
+            </div>
+            <div class="event__party">
+                <div class="event__top2">
+                    <h2>Wedding Party</h2>
+                </div>
+                <p>It would be great if you'd join us in celebrating our marriage. Situated in the country side the venue will provide the perfect.</p>
+                <img src="img/cvet.png" alt="">
+                <div class="event__time">
+                    <h2>17.00H - 19.30H</h2>
+                </div>
+            </div>
         </div>
     </div>
 </div>
