--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@200;300;400;500;600;700&family=Montez&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@200;300;400;500;600;700&family=Montez&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="header">
@@ -85,7 +89,15 @@
                 </div>
                 <p>It would be great if you'd join us in celebrating our marriage. Situated in the country side the venue will provide the perfect.</p>
                 <img src="img/cvet.png" alt="">
-                <div class="event__time"></div>
+                <div class="event__time">
+                    <h2>13.00H - 15.30H</h2>
+                    <div class="event__club">
+                        <p>Club House</p>
+                        <p>72 Nort Street, New York NY</p>
+                        <p>Thursday 07 July 2016</p>
+                        <p>8:00 PM - 5:00 AM</p>
+                    </div>
+                </div>
             </div>
             <div class="event__party">
                 <div class="event__top2">
@@ -95,10 +107,37 @@
                 <img src="img/cvet.png" alt="">
                 <div class="event__time">
                     <h2>17.00H - 19.30H</h2>
+                    <div class="event__club">
+                        <p>Club House</p>
+                        <p>72 Nort Street, New York NY</p>
+                        <p>Thursday 07 July 2016</p>
+                        <p>8:00 PM - 5:00 AM</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div class="time">
+    <div class="wrap">
+        <h2>Our Loveline</h2>
+        <img src="img/cvet.png" alt="">
+        <p>When Mike proposed a hiking trip in the country, little did Jen know that wasn’t the only proposal he was planning on making. Check out some beautiful photos of Jen & Mike just moments after their romantic engagement.</p>
+        <div class="slider">
+            <div class="time__circle">1</div>
+            <div class="time__circle">1</div>
+            <div class="time__circle"></div>
+            <div class="time__circle">2</div>
+            <div class="time__circle"></div>
+            <div class="time__circle"></div>
+        </div>
+    </div>
+</div>
+<script src="js/main.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/jqery.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
+
 </body>
 </html>
