--- a/index.html
+++ b/index.html
@@ -124,20 +124,41 @@
         <img src="img/cvet.png" alt="">
         <p>When Mike proposed a hiking trip in the country, little did Jen know that wasn’t the only proposal he was planning on making. Check out some beautiful photos of Jen & Mike just moments after their romantic engagement.</p>
         <div class="slider">
-            <div class="time__circle">1</div>
-            <div class="time__circle">1</div>
-            <div class="time__circle"></div>
-            <div class="time__circle">2</div>
-            <div class="time__circle"></div>
-            <div class="time__circle"></div>
+            <div class="cat">
+                <div class="time__circle"></div>
+                    <h2>our proposal</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorepsum has been the industry's.</p>
+            </div>
+            <div class="cat">
+                <div class="time__circle"></div>
+                <h2>our proposal</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorepsum has been the industry's.</p>
+            </div>
+            <div class="cat">
+                <div class="time__circle"></div>
+                <h2>our proposal</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorepsum has been the industry's.</p>
+            </div>
+            <div class="cat">
+                <div class="time__circle"></div>
+                <h2>our proposal</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorepsum has been the industry's.</p>
+            </div>
+            <div class="cat">
+                <div class="time__circle">proposal</div>
+                <h2>our proposal</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorepsum has been the industry's.</p>
+            </div>
         </div>
     </div>
 </div>
-<script src="js/main.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/jqery.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
+<script src="js/jqery.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/jqery.js"></script>
+
 
 </body>
 </html>
