--- a/index.html
+++ b/index.html
@@ -152,6 +152,34 @@
         </div>
     </div>
 </div>
+<div class="Featured">
+    <div class="wrap">
+        <div class="Featured__text">
+            <div class="Featured__left">
+                <p>We're so happy to have finally set a date for our big day. We're busy adding the finishing touches to the special day and we'd be delighted if you would join us for the occasion.</p>
+                <img src="img/podpis.png" alt="">
+            </div>
+            <div class="Featured__right">Kristen Steelee &  <h2>Cody Bearden</h2></div>
+        </div>
+    </div>
+</div>
+<div class="Gallery">
+    <div class="wrap">
+        <h2>The Day They Got Engaged</h2>
+        <img src="img/cvet.png" alt="">
+        <p>When Mike proposed a hiking trip in the country, little did Jen know that wasn’t the only proposal he was planning on making. Check out some beautiful photos of Jen & Mike just moments after their romantic engagement.</p>
+        <div class="Gallery__foto">
+            <div class="Gallery__fot1"></div>
+            <div class="Gallery__fot2"></div>
+            <div class="Gallery__fot3"></div>
+        </div>
+        <div class="Gallery__foto2">
+            <div class="Gallery__fot1"></div>
+            <div class="Gallery__fot2"></div>
+            <div class="Gallery__fot3"></div>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
 <script src="js/jqery.js"></script>
