--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
         </div>
     </div>
 </div>
+<div class="family">
+    <div class="family__cody"></div>
+</div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
 <script src="js/jqery.js"></script>
