--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <a href="#" class="header__logo">наша сваадьба</a>
     <nav>
         <ul class="header__list">
-            <li class="header__item">
-                <a href="" class="header__link">Home</a>
+            <li class="header__item active">
+                <a href="" class="header__link active">Home</a>
             </li>
             <li class="header__item">
                 <a href="" class="header__link">The wedding</a>
@@ -182,7 +182,27 @@
     </div>
 </div>
 <div class="family">
-    <div class="family__cody"></div>
+    <div class="family__famy">
+        <div class="family__cody"></div>
+    </div>
+    <div class="family__fat">
+        <div class="family__father">
+            <div class="family__martin"></div>
+            <h2>MARTIN BOUCHER</h2>
+        </div>
+        <div class="family__mather">
+            <div class="family__maria"></div>
+            <h2>MARIA BOUCHER</h2>
+            <span>Mother</span>
+        </div>
+    </div>
+    <div class="family__brother">
+        <div class="family__martin"></div>
+        <div class="family__martin"></div>
+        <div class="family__martin"></div>
+        <div class="family__martin"></div>
+    </div>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
